# DSGT-AthleticsScrapers

./: LICENSE  README.md  Test.py  WebScraper.py  setup.cfg
AthleticsScrapers/: NCAAScrapers.py  test1.csv  test2.csv
AthleticsScrapers/NCAAScraper/: INSTRUCTIONS.md  NCAA_box_scraper.py  NCAA_game_id_scraper.py  NCAA_pbp_scraper.py
DSGTAthleticsScrapers/: HoopMathScraper.py  __init__.py
DSGTAthleticsScrapers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
HoopMathScraper_Om_Rajpal/: scraper.py
NCAAPlayByPlayScraper_Gerald_L/: NCAA_box_scraper.py  NCAA_game_id_scraper.py  NCAA_pbp_scraper.py  NCAA_scraper.py  README.md  box_score_DUKE.csv  box_score_UVA.csv  playByPlayDUKEvUK2021-11.csv  playByPlayGATECHvCLAYST2022-11.csv  playByPlayGATECHvDUKE2021-03.csv  playByPlayGATECHvNIU2022-11.csv  playByPlayNC A&TvSTONY2023-03.csv  playByPlayTest.csv  webScraper.py
NCAA_scrapers/: INSTRUCTIONS.md  NCAA_game_id_scraper.py  test.csv
NCAA_scrapers_Gerald_L/: NCAA_box_scraper.py  NCAA_game_id_scraper.py  NCAA_pbp_scraper.py
