[metadata]
name = DSGTAthleticsScrapers
version = 0.0.1
author = DSGT Athletics Sub Team 6 - Gerald Lu, Akshar Ravichandran, Om Rajpal
author_email = lujerry131@gmail.com
description = Scrape sports data from NCAA and HOOP-MATH
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gerald-Lu/DSGT-AthleticsScrapers
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True